--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 		</div>
 		<div class="excursions-slider__inner">
 			<div class="excursions-slider">
-				<div class="slider-box" style="background-image: url(../images/excursions-img-1.jpg);">
+				<div class="slider-box" style="background-image: url(./images/excursions-img-1.jpg);">
 					<div class="slider-box__content">
 						<div class="slider-box__inner-subtitle">Автобусный тур</div>
 						<div class="slider-box__inner-title">Тур по Крыму (Феодосия)</div>
@@ -98,7 +98,7 @@
 				</div>
 			</div>
 			<div class="excursions-slider">
-				<div class="slider-box" style="background-image: url(../images/excursions-img-2.jpg);">
+				<div class="slider-box" style="background-image: url(./images/excursions-img-2.jpg);">
 					<div class="slider-box__content">
 						<div class="slider-box__inner-subtitle">Конный тур</div>
 						<div class="slider-box__inner-title">Конные прогулки</div>
@@ -114,7 +114,7 @@
 			</div>
 
 			<div class="excursions-slider">
-				<div class="slider-box" style="	background-image: url(../images/excursions-img-3.jpg);">
+				<div class="slider-box" style="	background-image: url(./images/excursions-img-3.jpg);">
 					<div class="slider-box__content">
 						<div class="slider-box__inner-subtitle">Квадротур</div>
 						<div class="slider-box__inner-title">Пасть дракона</div>
@@ -129,7 +129,7 @@
 				</div>
 			</div>
 			<div class="excursions-slider">
-				<div class="slider-box" style="	background-image: url(../images/excursions-img-4.jpg);">
+				<div class="slider-box" style="	background-image: url(./images/excursions-img-4.jpg);">
 					<div class="slider-box__content">
 						<div class="slider-box__inner-subtitle color-box">Австрия</div>
 						<div class="slider-box__inner-title">Обзорная по Австрии (из Украины)</div>
@@ -146,7 +146,7 @@
 				</div>
 			</div>
 			<div class="excursions-slider">
-				<div class="slider-box" style="	background-image: url(../images/excursions-img-5.jpg);">
+				<div class="slider-box" style="	background-image: url(./images/excursions-img-5.jpg);">
 					<div class="slider-box__content">
 						<div class="slider-box__inner-subtitle">Швейцария</div>
 						<div class="slider-box__inner-title">Обзорная по Женеве (из Украины)</div>
@@ -163,7 +163,7 @@
 				</div>
 			</div>
 			<div class="excursions-slider">
-				<div class="slider-box" style="	background-image: url(../images/excursions-img-6.jpg);">
+				<div class="slider-box" style="	background-image: url(./images/excursions-img-6.jpg);">
 					<div class="slider-box__content">
 						<div class="slider-box__inner-subtitle">Озеро Коммо</div>
 						<div class="slider-box__inner-title">Обзорная по Коммо (Италия)</div>
@@ -180,7 +180,7 @@
 				</div>
 			</div>
 			<div class="excursions-slider">
-				<div class="slider-box" style="	background-image: url(../images/excursions-img-7.jpg);">
+				<div class="slider-box" style="	background-image: url(./images/excursions-img-7.jpg);">
 					<div class="slider-box__content">
 						<div class="slider-box__inner-subtitle">Канада Альберта</div>
 						<div class="slider-box__inner-title">Обзорная по Альберте (Канада)</div>
