--- a/excursions.html
+++ b/excursions.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-	<header class="header-excursions" style="background-image: url(../images/header-excursions.jpg); background-size: cover;">
+	<header class="header-excursions" style="background-image: url(./images/header-excursions.jpg); background-size: cover;">
 		<div class="container">
 			<div class="header__inner">
 				<div class="header__logo">
@@ -262,7 +262,7 @@
 				<div class="our-tours__content">
 					<div class="our-tours__slider">
 						<div class="our-tours__img">
-							<img src="../images/tours.jpg" alt="photo slide" class="tours-img tours-img__1">
+							<img src="./images/tours.jpg" alt="photo slide" class="tours-img tours-img__1">
 						</div>
 						<div class="our-tours__slider-content">
 							<h6 class="our-tours__subtitle">Автобусный тур</h6>
@@ -304,7 +304,7 @@
 					<div class="our-tours__content">
 						<div class="our-tours__slider">
 							<div class="our-tours__img">
-								<img src="../images/tours-1.jpg" alt="photo slide" class="tours-img tours-img__2">
+								<img src="./images/tours-1.jpg" alt="photo slide" class="tours-img tours-img__2">
 							</div>
 							<div class="our-tours__slider-content">
 								<h6 class="our-tours__subtitle">Автобусный тур</h6>
@@ -347,7 +347,7 @@
 						<div class="our-tours__content our-tours__view">
 							<div class="our-tours__slider">
 								<div class="our-tours__img">
-									<img src="../images/tours-5.jpg" alt="photo slide" class="tours-img tours-img__3">
+									<img src="./images/tours-5.jpg" alt="photo slide" class="tours-img tours-img__3">
 								</div>
 								<div class="our-tours__slider-content">
 									<h6 class="our-tours__subtitle">Автобусный тур</h6>
@@ -392,7 +392,7 @@
 							<div class="our-tours__content our-tours__view">
 								<div class="our-tours__slider">
 									<div class="our-tours__img">
-										<img src="../images/tours-4.jpg" alt="photo slide" class="tours-img tours-img__4">
+										<img src="./images/tours-4.jpg" alt="photo slide" class="tours-img tours-img__4">
 									</div>
 									<div class="our-tours__slider-content">
 										<h6 class="our-tours__subtitle">Автобусный тур</h6>
