--- a/excursions__three.html
+++ b/excursions__three.html
@@ -265,7 +265,7 @@
 				<div class="our-tours__content">
 					<div class="our-tours__slider">
 						<div class="our-tours__img">
-							<img src="../images/tours-9.jpg" alt="photo slide" class="tours-img">
+							<img src="./images/tours-9.jpg" alt="photo slide" class="tours-img">
 						</div>
 						<div class="our-tours__slider-content">
 							<h6 class="our-tours__subtitle">Автобусный тур</h6>
@@ -307,7 +307,7 @@
 					<div class="our-tours__content">
 						<div class="our-tours__slider">
 							<div class="our-tours__img">
-								<img src="../images/tours-10.jpg" alt="photo slide" class="tours-img">
+								<img src="./images/tours-10.jpg" alt="photo slide" class="tours-img">
 							</div>
 							<div class="our-tours__slider-content">
 								<h6 class="our-tours__subtitle">Автобусный тур</h6>
@@ -350,7 +350,7 @@
 						<div class="our-tours__content our-tours__view">
 							<div class="our-tours__slider">
 								<div class="our-tours__img">
-									<img src="../images/tours-11.jpg" alt="photo slide" class="tours-img">
+									<img src="./images/tours-11.jpg" alt="photo slide" class="tours-img">
 								</div>
 								<div class="our-tours__slider-content">
 									<h6 class="our-tours__subtitle">Автобусный тур</h6>
@@ -395,7 +395,7 @@
 							<div class="our-tours__content our-tours__view">
 								<div class="our-tours__slider">
 									<div class="our-tours__img">
-										<img src="../images/tours-12.jpg" alt="photo slide" class="tours-img">
+										<img src="./images/tours-12.jpg" alt="photo slide" class="tours-img">
 									</div>
 									<div class="our-tours__slider-content">
 										<h6 class="our-tours__subtitle">Автобусный тур</h6>
