--- a/tour-austria.html
+++ b/tour-austria.html
@@ -15,12 +15,12 @@
 </head>
 
 <body>
-	<header class="header-excursions" style="background-image: url(../images/austria/tour-austria-header.jpg); height: 670px;">
+	<header class="header-excursions" style="background-image: url(./images/austria/tour-austria-header.jpg); height: 670px;">
 		<div class="container">
 			<div class="header__inner">
 				<div class="header__logo">
 					<a href="#" class="logo__link">
-						<img src="../images/header-logo.png" alt="">
+						<img src="./images/header-logo.png" alt="">
 					</a>
 				</div>
 				<div class="menu">
@@ -68,17 +68,17 @@
 				</div>
 				<div class="description__content-price">
 					<div class="description-price__grown"
-						style="background-image: url('../images/tour-price.png'); background-repeat: no-repeat;">
+						style="background-image: url('./images/tour-price.png'); background-repeat: no-repeat;">
 						<h4 class="description-price">400$</h4>
 						<p class="description-text__price">Взрослый билет</p>
 					</div>
 					<div class="description-price__small"
-						style="background-image: url('../images/tour-price.png'); width: 180px; background-repeat: no-repeat;">
+						style="background-image: url('./images/tour-price.png'); width: 180px; background-repeat: no-repeat;">
 						<h4 class="description-price">200$</h4>
 						<p class="description-text__price">Детский билет</p>
 					</div>
 					<div class="description-price__time"
-						style="background-image: url('../images/tours-time.png'); background-repeat: no-repeat;">
+						style="background-image: url('./images/tours-time.png'); background-repeat: no-repeat;">
 						<h4 class="description-time">2 дня</h4>
 					</div>
 				</div>
@@ -86,7 +86,7 @@
 		</div>
 	</section>
 	<section class="travel-calendar"
-		style="background-image: url('../images/austria/tour-austria-bg.jpg'); width: 825px; height:870px; border-radius: 0 10px 10px 0; background-size: cover;">
+		style="background-image: url('./images/austria/tour-austria-bg.jpg'); width: 825px; height:870px; border-radius: 0 10px 10px 0; background-size: cover;">
 		<div class="container">
 			<div class="travel-calendar__content">
 				<div class="travel-content__box">
@@ -221,11 +221,11 @@
 				</div>
 				<div class="info-content__aside">
 					<div class="info-content__aside-box"
-						style="background-image: url('../images/info-bg.jpg'); background-size: cover; background-repeat: no-repeat; background-position: center;">
+						style="background-image: url('./images/info-bg.jpg'); background-size: cover; background-repeat: no-repeat; background-position: center;">
 						<p class="info-content__aside-text">Каждый турист из Украины, планирующий въезд в ЕС, будет обязан раз в три года проходить онлайн-авторизацию – заполнять ETIAS-анкету (без необходимости обращаться в консульство, визовый центр или к любому другому посреднику).</p>
 					</div>
 					<div class="info-content__aside-box"
-						style="background-image: url('../images/info-bg.jpg'); background-size: cover; background-repeat: no-repeat; background-position: center;">
+						style="background-image: url('./images/info-bg.jpg'); background-size: cover; background-repeat: no-repeat; background-position: center;">
 						<p class="info-content__aside-text">Цель системы – проводить автоматическую проверку того, нет ли документа человека, путешествующего по безвизовому режиму, в списках разыскиваемых лиц или тех, кому запрещен или ограничен въезд в ЕС.</p>
 					</div>
 				</div>
@@ -244,33 +244,33 @@
 		<div class="gallery__content-inner">
 			<div class="gallery__content">
 				<div class="gallery__box gallery__box-left">
-					<img src="../images/austria/austria-gallery-1.jpg" alt="photo"
+					<img src="./images/austria/austria-gallery-1.jpg" alt="photo"
 						style="max-width: 520px; max-height: 330px; background-position: right; background-size: cover; border-radius: 10px"
 						class="gallery__box-img gallery__box-width">
 					<div class="gallery__box-iner">
-						<img src="../images/austria/austria-gallery-2.jpg" alt="photo"
+						<img src="./images/austria/austria-gallery-2.jpg" alt="photo"
 							style="width: 275px; max-height: 140px; border-radius: 10px"
 							class="gallery__box-img gallery__box-narrow">
 						<div class="gallery__box-images">
-							<img src="../images/austria/austria-gallery-3.jpg" alt="photo"
+							<img src="./images/austria/austria-gallery-3.jpg" alt="photo"
 								style="max-width: 268px; max-height: 140px; margin-left: 10px; border-radius: 10px"
 								class="gallery__box-img gallery__box-small">
 						</div>
 					</div>
 				</div>
 				<div class="gallery__box ">
-					<img src="../images/austria/austria-gallery-5.jpg" alt="photo" class="gallery__box-img gallery__box-height"
+					<img src="./images/austria/austria-gallery-5.jpg" alt="photo" class="gallery__box-img gallery__box-height"
 						style="height: 478px; border-radius: 10px; margin: 0 15px;">
 				</div>
 				<div class="gallery__box gallery__box-left">
 					<div class="gallery__box ">
-						<img src="../images/austria/austria-gallery-6.jpg" alt="photo" class="gallery__box-img"
+						<img src="./images/austria/austria-gallery-6.jpg" alt="photo" class="gallery__box-img"
 							style="max-width: 520px; max-height: 330px; background-position: center top; background-size: cover; border-radius: 10px">
 						<div class="gallery__box-wrap">
-							<img src="../images/austria/austria-gallery-7.jpg" alt="photo" class="gallery__box-img gallery__box-dubai"
+							<img src="./images/austria/austria-gallery-7.jpg" alt="photo" class="gallery__box-img gallery__box-dubai"
 								style="max-width: 237px; max-height: 140px; border-radius: 10px">
 							<div class="gallery__box ">
-								<img src="../images/austria/austria-gallery-8.jpg" alt="photo" class="gallery__box-img gallery__pic-width"
+								<img src="./images/austria/austria-gallery-8.jpg" alt="photo" class="gallery__box-img gallery__pic-width"
 									style="width: 257px; max-height: 140px; margin-left: 10px; border-radius: 10px">
 							</div>
 						</div>
@@ -296,7 +296,7 @@
 			<div class="slider-review__inner">
 				<div class="slider-review__content">
 					<div class="slider__review-img">
-						<img class="review-img" src="../images/review-dubai-1.jpg" alt="">
+						<img class="review-img" src="./images/review-dubai-1.jpg" alt="">
 					</div>
 					<div class="slider__review-title">
 						<h6 class="slider__review-caption">Ивана Иванова, 22 лет</h6>
@@ -309,7 +309,7 @@
 			<div class="slider-review__inner">
 				<div class="slider-review__content">
 					<div class="slider__review-img">
-						<img class="review-img" src="../images/review-dubai-2.jpg" alt="">
+						<img class="review-img" src="./images/review-dubai-2.jpg" alt="">
 					</div>
 					<div class="slider__review-title">
 						<h6 class="slider__review-caption">Мартин Кук, 28 лет</h6>
@@ -322,7 +322,7 @@
 			<div class="slider-review__inner">
 				<div class="slider-review__content">
 					<div class="slider__review-img">
-						<img class="review-img" src="../images/review-dubai-3.jpg" alt="">
+						<img class="review-img" src="./images/review-dubai-3.jpg" alt="">
 					</div>
 					<div class="slider__review-title">
 						<h6 class="slider__review-caption">Лилия Городецкая, 20 лет</h6>
@@ -335,7 +335,7 @@
 			<div class="slider-review__inner">
 				<div class="slider-review__content">
 					<div class="slider__review-img">
-						<img class="review-img" src="../images/review4.jpg" alt="">
+						<img class="review-img" src="./images/review4.jpg" alt="">
 					</div>
 					<div class="slider__review-title">
 						<h6 class="slider__review-caption">Остап Лагуна, 25 лет</h6>
@@ -348,7 +348,7 @@
 			<div class="slider-review__inner">
 				<div class="slider-review__content">
 					<div class="slider__review-img">
-						<img class="review-img" src="../images/review5.jpg" alt="">
+						<img class="review-img" src="./images/review5.jpg" alt="">
 					</div>
 					<div class="slider__review-title">
 						<h6 class="slider__review-caption">Костя Барберов, 22 года</h6>
@@ -361,7 +361,7 @@
 			<div class="slider-review__inner">
 				<div class="slider-review__content">
 					<div class="slider__review-img">
-						<img class="review-img" src="../images/review6.jpg" alt="">
+						<img class="review-img" src="./images/review6.jpg" alt="">
 					</div>
 					<div class="slider__review-title">
 						<h6 class="slider__review-caption">Борис Давидов, 24 года</h6>
@@ -374,7 +374,7 @@
 			<div class="slider-review__inner">
 				<div class="slider-review__content">
 					<div class="slider__review-img">
-						<img class="review-img" src="../images/review7.jpg" alt="">
+						<img class="review-img" src="./images/review7.jpg" alt="">
 					</div>
 					<div class="slider__review-title">
 						<h6 class="slider__review-caption">Катя Мамонтова, 29 лет</h6>
@@ -388,7 +388,7 @@
 			<div class="slider-review__inner">
 				<div class="slider-review__content">
 					<div class="slider__review-img">
-						<img class="review-img" src="../images/review8.jpg" alt="">
+						<img class="review-img" src="./images/review8.jpg" alt="">
 					</div>
 					<div class="slider__review-title">
 						<h6 class="slider__review-caption">Лев Григорич, 27 лет</h6>
@@ -404,7 +404,7 @@
 		<section class="book-tour">
 				<div class="book-tour__inner">
 					<div class="book-tour__box">
-						<img src="../images/austria/book-tour-bg.jpg" alt="" class="book-tour__box-img">
+						<img src="./images/austria/book-tour-bg.jpg" alt="" class="book-tour__box-img">
 					</div>
 					<div class="container">
 					<div class="book-tour__container">
@@ -435,7 +435,7 @@
 			<div class="container">
 				<div class="footer__content footer__content-tours ">
 					<div class="footer-logo">
-						<img class="footer-logo__img" src="../images/footer-logo.png" alt="">
+						<img class="footer-logo__img" src="./images/footer-logo.png" alt="">
 					</div>
 					<div class="footer-menu">
 						<nav class="footer-menu__inner">
