--- a/excursions__three.html
+++ b/excursions__three.html
@@ -22,7 +22,7 @@
 			<div class="header__inner">
 				<div class="header__logo">
 					<a href="#" class="logo__link">
-						<img src="../images/header-logo.png" alt="">
+						<img src="./images/header-logo.png" alt="">
 					</a>
 				</div>
 				<div class="menu">
