--- a/tour-andora.html
+++ b/tour-andora.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-	<header class="header-excursions" style="background-image: url('../images/andorra/tour-andorra-header.jpg'); height: 670px; background-position: center; background-size: cover;">
+	<header class="header-excursions" style="background-image: url('./images/andorra/tour-andorra-header.jpg'); height: 670px; background-position: center; background-size: cover;">
 		<div class="container">
 			<div class="header__inner">
 				<div class="header__logo">
@@ -75,17 +75,17 @@
 				</div>
 				<div class="description__content-price">
 					<div class="description-price__grown"
-						style="background-image: url('../images/tour-price.png'); background-repeat: no-repeat;">
+						style="background-image: url('./images/tour-price.png'); background-repeat: no-repeat;">
 						<h4 class="description-price">400$</h4>
 						<p class="description-text__price">Взрослый билет</p>
 					</div>
 					<div class="description-price__small"
-						style="background-image: url('../images/tour-price.png'); width: 180px; background-repeat: no-repeat;">
+						style="background-image: url('./images/tour-price.png'); width: 180px; background-repeat: no-repeat;">
 						<h4 class="description-price">200$</h4>
 						<p class="description-text__price">Детский билет</p>
 					</div>
 					<div class="description-price__time"
-						style="background-image: url('../images/tours-time.png'); background-repeat: no-repeat;">
+						style="background-image: url('./images/tours-time.png'); background-repeat: no-repeat;">
 						<h4 class="description-time">2 дня</h4>
 					</div>
 				</div>
@@ -179,7 +179,7 @@
 					</div>
 					<div class="tours-content__inner">
 					<div class="tours-content"
-						style="background-image: url(../images/andorra/tours-andorra-slider-1.jpg);">
+						style="background-image: url(./images/andorra/tours-andorra-slider-1.jpg);">
 						<p class="tours-content__text">Метеора</p>
 					</div>
 					</div>
