--- a/office.html
+++ b/office.html
@@ -16,12 +16,12 @@
 
 <body>
 	<header class="header-excursions"
-		style="background-image: url('../images/office/tour-office-header.jpg'); height: 670px; background-position: center; background-position: center;">
+		style="background-image: url('./images/office/tour-office-header.jpg'); height: 670px; background-position: center; background-position: center;">
 		<div class="container">
 			<div class="header__inner">
 				<div class="header__logo">
 					<a href="#" class="logo__link">
-						<img src="../images/header-logo.png" alt="">
+						<img src="./images/header-logo.png" alt="">
 					</a>
 				</div>
 				<div class="menu">
@@ -112,7 +112,7 @@
 		<div class="container">
 			<div class="footer__content footer__content-tours ">
 				<div class="footer-logo">
-					<img class="footer-logo__img" src="../images/footer-logo.png" alt="">
+					<img class="footer-logo__img" src="./images/footer-logo.png" alt="">
 				</div>
 				<div class="footer-menu">
 					<nav class="footer-menu__inner">
@@ -134,11 +134,11 @@
 					</div>
 					<div class="footer-social__network">
 						<a href="#" class="social__network">
-							<img src="../images/vkontakte-icon.svg" alt="" class="social__network"></a>
+							<img src="./images/vkontakte-icon.svg" alt="" class="social__network"></a>
 						<a href="#" class="social__network">
-							<img src="../images/instagram-icon.svg" alt="" class="social__network"></a>
+							<img src="./images/instagram-icon.svg" alt="" class="social__network"></a>
 						<a href="#" class="social__network">
-							<img src="../images/facebook-icon.svg" alt="" class="social__network"></a>
+							<img src="./images/facebook-icon.svg" alt="" class="social__network"></a>
 					</div>
 				</div>
 			</div>
